02-config/k8s/03-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80

          volumeMounts:
          - name: template-volume
            mountPath: /etc/nginx/templates/
          - name: htpasswd-volume
            mountPath: /etc/nginx/.htpasswd
            subPath: .htpasswd

      volumes:
          - name: template-volume
            configMap:
              name: nginx-config-template
          - name: htpasswd-volume
            secret:
              secretName: nginx-auth-file
