02-config/k8s/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: vessel-k8s-lab.local
    http:
      paths:
      - path: /02-config
        pathType: Prefix
        backend:
          service:
            name: app-nginx-service
            port:
              number: 80
